End of section 4

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -7,5 +7,6 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data source=dating.db"
-  }
+  },
+  "TokenKey": "your-very-long-and-secure-token-key-that-is-at-least-64-characters-long"
 }
